--- a/jenkins.yaml
+++ b/jenkins.yaml
@@ -1,53 +1,26 @@
 ---
   - name: Provisionamento de instancias ec2
     hosts: service
-    become: no
-   # become_user: root
-   # become_method: su
+    become: true
+    become_user: root 
     connection: local
     gather_facts: False
     tags: provisioning
 
     tasks:
 
-      - name: Instalando APPs
-        apt:
-          name: git
-          update_cache: yes
-          state: present      
+      - name: Get URL jenkins
+        get_url: 
+              url: https://pkg.jenkins.io/debian/jenkins-ci.org.key
+              dest: /tmp/
 
- 
-      - name: curl do source nodejs
-        get_url:
-          url:  https://deb.nodesource.com/setup_6.x
-          dest: /etc/ 
+      - name: echo deb
+        command: sudo sh -c 'echo deb http://pkg.jenkins.io/debian-stable binary/ > /etc/apt/sources.list.d/jenkins.list'
 
-      - name: Instalando APPs
+      - name: Instalando jenkins
         apt:
-          name: nodejs
+          name: jenkins
           update_cache: yes
           state: present
 
-      - name: Checking the user name
-        shell: /usr/bin/whoami
-        register: username
-
-      - name: debugging
-        debug: msg={{ username }} 
-
-      - name: criando diretorio
-        file:
-          path: /home/ubuntu/www
-          state: directory
-          owner: ubuntu
-          group: ubuntu
-
-      - name: clone repositorio
-        git:
-          repo: 'https://github.com/lucasvilelarodrigues/nodejs.org.git'
-          dest: /home/ubuntu/www
-          clone: yes
-
-      - name: instalando aplicação
-        command: cd /home/ubuntu/www/nodejs.org | npm install | npm start
-
+ 
